remove scatter file

--- a/PyBer_Challenge.ipynb
+++ b/PyBer_Challenge.ipynb
@@ -427,7 +427,7 @@
    ],
    "source": [
     "#  8. Format the columns.\n",
-    "pyber_summary_df[\"Total Fares\"] = pyber_summary_df[\"Total Fares\"].map(\"${:,.2f}\".format) \n"
+    "pyber_summary_df[\"Total Fares\"] = pyber_summary_df[\"Total Fares\"].map(\"${:,.2f}\".format)"
    ]
   },
   {
