--- a/PyBer_Challenge.ipynb
+++ b/PyBer_Challenge.ipynb
@@ -444,7 +444,8 @@
    "outputs": [],
    "source": [
     "# 9. Using groupby() on the pyber_data_df to create a new DataFrame showing the sum of the fares \n",
-    "#  for each date where the indices are the city type and date.\n"
+    "#  for each date where the indices are the city type and date.\n",
+    "\n"
    ]
   },
   {
